<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Agenda</string>
    <string name="txt_userName">Nombre</string>
    <string name="txt_pass">Clave</string>
    <string name="txt_ChangePass">Cambiar Contraseña</string>
    <string name="checkBx_Remember">Recuérdame</string>
    <string name="btn_LogIn">Iniciar Sesión</string>
    <string name="btn_LogOut">Cerrar Sesión</string>
    <string name="btn_AddRegister">Nuevo Registro</string>
    <string name="btn_ShowList">Mostrar Listado</string>
    <string name="btn_Exit">Salir</string>
    <string name="btn_Cancel">Cancelar</string>
    <string name="btn_Modify">Modificar</string>
    <string name="btn_Erase">Borrar</string>
    <string name="btn_Register">Registrar</string>
    <string name="txt_taskTitle">Tarea:</string>
    <string name="txt_taskName">Nombre de la tarea</string>
    <string name="txt_Description">Descripción</string>
    <string name="txt_Date">Fecha</string>
    <string name="txt_Cost">Coste</string>
    <string name="btn_DoneTasks">Tareas Realizadas</string>
    <string name="btn_PendingTasks">Tareas Pendientes</string>
    <string name="btn_English">Inglés</string>
    <string name="btn_Spanish">Español</string>
    <string-array name="spinner_priority">
        <item>Urgente</item>
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>
</resources>